--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="F:/Downloads/Plugins/bukkit-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="F:/Downloads/Plugins/Permissions.jar"/>
+	<classpathentry kind="lib" path="deps/craftbukkit.jar"/>
+	<classpathentry kind="lib" path="deps/Vault.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
