--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,8 @@
 name: ObsidianDestroyer
 main: com.pandemoneus.obsidianDestroyer.ObsidianDestroyer
-version: 1.052
-author: 'Pandemoneus'
+version: 1.2.0
+author: ['alecgorge', 'Pandemoneus']
+depend: [Vault]
 
 commands:
     obsidiandestroyer:
