--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: ObsidianDestroyer
-main: com.pandemoneus.obsidianDestroyer.ObsidianDestroyer
-version: 1.2.50
-author: ['squidicuzz', 'alecgorge', 'Pandemoneus']
+main: net.kaoslabs.obsidiandestroyer.ObsidianDestroyer
+version: 1.3
+author: ['Pandemoneus', 'squidicuzz', 'alecgorge', 'Kaos']
 depend: [Vault]
 
 commands:
