--- a/pom.xml
+++ b/pom.xml
@@ -1,110 +1,72 @@
-<<<<<<< HEAD
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.pandemoneus.obsidianDestroyer</groupId>
-	<packaging>jar</packaging>
-	<version>bleeding</version>
-	<name>ObsidianDestroyer</name>
-	<url>http://github.com/alecgorge/ObsidianDestroyer</url>
-	<scm>
-		<developerConnection>scm:git:git@github.com:alecgorge/ObsidianDestroyer.git</developerConnection>
-		<connection>scm:git:git://github.com/alecgorge/ObsidianDestroyer.git</connection>
-		<url>https://github.com/alecgorge/ObsidianDestroyer/tree/master/</url>
-	</scm>
-	<build>
-		<finalName>ObsidianDestroyer</finalName>
-		<sourceDirectory>src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>src</directory>
-				<includes>
-					 <include>plugin.yml</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>net.milkbowl.vault</groupId>
-			<artifactId>Vault</artifactId>
-			<version>1.2.13</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/deps/Vault.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.bukkit.craftbukkit</groupId>
-			<artifactId>craftbukkit</artifactId>
-			<version>1.2-R0.2</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/deps/craftbukkit.jar</systemPath>
-		</dependency>
-	</dependencies>	
-	<artifactId>ObsidianDestroyer</artifactId>
-=======
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.pandemoneus.obsidianDestroyer</groupId>
-	<packaging>jar</packaging>
-	<version>bleeding</version>
-	<name>ObsidianDestroyer</name>
-	<url>http://github.com/alecgorge/ObsidianDestroyer</url>
-	<scm>
-		<developerConnection>scm:git:git@github.com:alecgorge/ObsidianDestroyer.git</developerConnection>
-		<connection>scm:git:git://github.com/alecgorge/ObsidianDestroyer.git</connection>
-		<url>https://github.com/alecgorge/ObsidianDestroyer/tree/master/</url>
-	</scm>
-	<build>
-		<finalName>ObsidianDestroyer</finalName>
-		<sourceDirectory>src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>src</directory>
-				<includes>
-					 <include>plugin.yml</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>net.milkbowl.vault</groupId>
-			<artifactId>Vault</artifactId>
-			<version>1.2.13</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/deps/Vault.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.bukkit.craftbukkit</groupId>
-			<artifactId>craftbukkit</artifactId>
-			<version>1.2-R0.2</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/deps/craftbukkit.jar</systemPath>
-		</dependency>
-	</dependencies>	
-	<artifactId>ObsidianDestroyer</artifactId>
->>>>>>> 4dae8d4a625359bc5c30d448d44872e52c3cdf9c
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.pandemoneus</groupId>
+    <artifactId>obsidianDestroyer</artifactId>
+    <version>2.7</version>
+    <name>ObsidianDestroyer</name>
+    <url>https://github.com/drtshock/ObsidianDestroyer</url>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/drtshock/ObsidianDestroyer/issues</url>
+    </issueManagement>
+    <build>
+        <finalName>ObsidianDestroyer</finalName>
+        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+        <resources>
+            <resource>
+                <targetPath>.</targetPath>
+                <filtering>true</filtering>
+                <directory>${basedir}/src/main/resources/</directory>
+                <includes>
+                    <include>*.yml</include>
+                </includes>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptors>
+                        <descriptor>src/main/assembly/package.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>build</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <repositories>
+        <repository>
+            <id>bukkit-repo</id>
+            <url>http://repo.bukkit.org/content/groups/public/</url>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>org.bukkit</groupId>
+            <artifactId>bukkit</artifactId>
+            <version>LATEST</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
