--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,6 +7,7 @@ EnabledFor:
   Cannons: false
   Creepers: false
   Ghasts: false
+  Withers: false
 Durability:
   Enabled: false
   Amount: 1
@@ -17,3 +18,4 @@ EnchantmentTableDurability:
   Amount: 1
 Blocks:
   ChanceToDrop: 0.7
+UseFactions: false
