--- a/pom.xml
+++ b/pom.xml
@@ -61,12 +61,12 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <type>jar</type>
-            <scope>compile</scope>
+            <version>1.5-R0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
         	<groupId>org.bukkit</groupId>
         	<artifactId>craftbukkit</artifactId>
+        	<version>1.5-R0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <properties>
