--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,7 +4,7 @@
 # Made with love <3
 
 # Do not touch this line. It will rewrite your config.
-Version: '2.10'
+Version: '2.11'
 
 # This will only check for updates. We will never download them for you.
 checkupdate: true
@@ -38,11 +38,9 @@ Durability:
   EnchantmentTable: 1
   EnderChest: 1
   Anvil: 1
+  Bedrock: 1
   ResetEnabled: true
   ResetAfter: '600000'
-  
-# CheckSpawners: true - will allow us to drop monster spawners. Do not enable this if you have
-#   another plugin that handles it.
 
 # Chance to drop. Setting to anything at or above 1 will make them always drop.
 Blocks:
