--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>royaldev-repo</id>
+            <url>http://minor.royaldev.org:8081/nexus/content/groups/public</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -67,6 +71,11 @@
         	<groupId>org.bukkit</groupId>
         	<artifactId>craftbukkit</artifactId>
         	<version>1.5.1-R0.1-SNAPSHOT</version><!--$NO-MVN-MAN-VER$-->
+        </dependency>
+        <dependency>
+                <groupId>com.massivecraft</groupId>
+                <artifactId>factions</artifactId>
+                <version>1.8.0</version>
         </dependency>
     </dependencies>
     <properties>
@@ -84,6 +93,11 @@
     			<artifactId>bukkit</artifactId>
     			<version>LATEST</version>
     		</dependency>
+                <dependency>
+                        <groupId>com.massivecraft</groupId>
+                        <artifactId>factions</artifactId>
+                        <version>LATEST</version>
+                </dependency>
     	</dependencies>
     </dependencyManagement>
 </project>
