--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pandemoneus</groupId>
     <artifactId>ObsidianDestroyer</artifactId>
-    <version>2.12-SNAPSHOT</version>
+    <version>2.12</version>
     <name>ObsidianDestroyer</name>
     <url>https://github.com/drtshock/ObsidianDestroyer</url>
     <issueManagement>
