--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,14 @@
     <version>2.14-SNAPSHOT</version>
     <name>ObsidianDestroyer</name>
     <url>https://github.com/drtshock/ObsidianDestroyer</url>
+    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <upload.dbo.category>server-mods</upload.dbo.category>
+        <upload.dbo.slug>obsidiandestroyer</upload.dbo.slug>
+
+    </properties>
     <issueManagement>
         <system>GitHub</system>
         <url>https://github.com/drtshock/ObsidianDestroyer/issues</url>
