--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -56,7 +56,7 @@ Durability:
   
 # Experimental Timer safety. Use this if you are having issues with your server running out of memory.
 # This is not a fix to out of memory errors. Though it can help prevent this plugin from crashing your server.
-# "SystemMinMemory" = Minimun amount of RAM that can be availabe.
+# "SystemMinMemory" = Minimun amount (MegaBytes) of RAM that can be availabe.
 # If there is less than this amount of memory available, no new timer threads will be created.
   UseTimerSafety: false
   SystemMinMemory: 80
