--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ObsidianDestroyer
 main: com.drtshock.obsidiandestroyer.ObsidianDestroyer
 version: ${project.version}
-author: drtshock
+authors: [drtshock, squidiccuz, chester]
 softdepend: [Factions]
 
 commands:
