--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: ObsidianDestroyer
 main: com.drtshock.obsidiandestroyer.ObsidianDestroyer
 version: ${project.version}
 authors: [drtshock, squidicuz]
-softdepend: [Factions]
+softdepend: [Factions, Towny]
 
 commands:
     obsidiandestroyer:
