--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,10 @@
             <id>royaldev-repo</id>
             <url>http://minor.royaldev.org:8081/nexus/content/groups/public</url>
         </repository>
+        <repository>
+            <id>sk89q-maven</id>
+            <url>http://maven.sk89q.com/repo</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -89,6 +93,7 @@
             <groupId>com.palmergames</groupId>
             <artifactId>towny</artifactId>
             <version>0.82.1.0</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.sk89q</groupId>
