--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
             <id>sk89q</id>
             <url>http://maven.sk89q.com/repo/</url>
         </repository>
+        <repository>
+            <id>com.palmergames</id>
+            <url>file://${basedir}/repo</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -98,7 +102,7 @@
         <dependency>
             <groupId>com.sk89q</groupId>
             <artifactId>worldguard</artifactId>
-            <version>846-6283382</version>
+            <version>5.7.4-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
