--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,6 @@
             <id>sk89q</id>
             <url>http://maven.sk89q.com/repo/</url>
         </repository>
-        <repository>
-            <id>com.palmergames</id>
-            <url>file://${basedir}/repo</url>
-        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -96,8 +92,10 @@
         <dependency>
             <groupId>com.palmergames</groupId>
             <artifactId>towny</artifactId>
-            <version>0.82.1.0</version>
+            <version>0.83.0.0</version>
             <optional>true</optional>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/Towny-0.83.0.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.sk89q</groupId>
