--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ObsidianDestroyer
 main: com.drtshock.obsidiandestroyer.ObsidianDestroyer
-version: ${project.version}
+version: ${project.version}-b${BUILD_NUMBER}
 authors: [drtshock, squidicuz]
 softdepend: [Factions, Towny, WorldGuard]
 
