This was bugging me.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,4 @@ commands:
         description: ObisidanDestroyer
         usage: |
                /<command>
-    od:
-        description: ObisidanDestroyer
-        usage: |
-               /<command>
+        aliases: [od]
