--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,7 +16,8 @@ checkupdate: true
 Radius: 3
 
 # The id of the item you use to check durability.
-CheckItemId: 38
+# NO LONGER USED. Can only use a red rose now.
+# CheckItemId: 38
 
 # Setting this to true may cause errors with other plugins. But it will make us handle all explosions
 # no matter what other plugins try to do.
