Allow TNT minecarts to blow up obsidian. Adds configuration option

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -29,6 +29,7 @@ EnabledFor:
   Creepers: false
   Ghasts: false
   Withers: false
+  TNTCarts: false
   
   # Used to integrate with the cannons plugin.
   Cannons: false
