Durability can now regenerate over time.  Chester demanded more refactoring. :shipit:

--- a/src/main/resources/materials.yml
+++ b/src/main/resources/materials.yml
@@ -1,7 +1,7 @@
-#Make any solid material withstand blasts from settable damage amounts and types
-#Materials that are not normally destructible, can be.
+# Make any solid material withstand blasts from settable damage amounts and types
+# Materials that are not normally destructible, can be.
 
-#List of Materials to apply a durability amount to
+# List of Materials to apply a durability amount to
 HandledMaterials:
 
   # The name of Material that will have a durability applied
@@ -21,20 +21,21 @@ HandledMaterials:
       ChanceToDrop: 0.9
 
       # Wether the durability for this material will reset after some time
-      ResetEnabled: false
+      ResetEnabled: true
 
-      # The time it takes for this material to fully regenerate
-      ResetAfter: 300000
+      # The time it takes for this material to fully reset or regenerate
+      # Time is in milliseconds
+      ResetAfter: 900000
 
     # Explosion types you want us to handle.
     EnabledFor:
       TNT: true
       Creepers: true
-      Ghasts: false
-      Cannons: false
-      Withers: false
-      Minecarts: false
-      
+      Ghasts: true
+      Cannons: true
+      Withers: true
+      Minecarts: true
+
   OBSIDIAN:
     Durability:
       Amount: 13
@@ -46,63 +47,7 @@ HandledMaterials:
       TNT: true
       Creepers: false
       Ghasts: false
-      Cannons: false
-      Withers: false
-      Minecarts: false
-  SMOOTH_BRICK:
-    Durability:
-      Amount: 4
-      Enabled: false
-      ChanceToDrop: 0.7
-      ResetEnabled: false
-      ResetAfter: 300000
-    EnabledFor:
-      TNT: true
-      Creepers: false
-      Ghasts: false
-      Cannons: false
-      Withers: false
-      Minecarts: false
-  SMOOTH_STAIRS:
-    Durability:
-      Amount: 4
-      Enabled: false
-      ChanceToDrop: 0.7
-      ResetEnabled: false
-      ResetAfter: 300000
-    EnabledFor:
-      TNT: true
-      Creepers: true
-      Ghasts: false
-      Cannons: false
-      Withers: false
-      Minecarts: false
-  NETHER_BRICK:
-    Durability:
-      Amount: 3
-      Enabled: false
-      ChanceToDrop: 0.7
-      ResetEnabled: true
-      ResetAfter: 300000
-    EnabledFor:
-      TNT: true
-      Creepers: true
-      Ghasts: false
-      Cannons: false
-      Withers: false
-      Minecarts: false
-  NETHER_BRICK_STAIRS:
-    Durability:
-      Amount: 3
-      Enabled: false
-      ChanceToDrop: 0.7
-      ResetEnabled: true
-      ResetAfter: 300000
-    EnabledFor:
-      TNT: true
-      Creepers: true
-      Ghasts: false
-      Cannons: false
+      Cannons: true
       Withers: false
       Minecarts: false
   ENCHANTMENT_TABLE:
@@ -124,8 +69,8 @@ HandledMaterials:
       Amount: 4
       Enabled: true
       ChanceToDrop: 0.6
-      ResetEnabled: false
-      ResetAfter: 300000
+      ResetEnabled: true
+      ResetAfter: 900000
     EnabledFor:
       TNT: true
       Creepers: false
@@ -138,25 +83,11 @@ HandledMaterials:
       Amount: 3
       Enabled: true
       ChanceToDrop: 0.6
-      ResetEnabled: false
-      ResetAfter: 300000
+      ResetEnabled: true
+      ResetAfter: 900000
     EnabledFor:
       TNT: true
-      Creepers: false
-      Ghasts: false
-      Cannons: false
-      Withers: false
-      Minecarts: false
-  BEDROCK:
-    Durability:
-      Amount: 100
-      Enabled: false
-      ChanceToDrop: 0.0
-      ResetEnabled: false
-      ResetAfter: 600000
-    EnabledFor:
-      TNT: true
-      Creepers: false
+      Creepers: true
       Ghasts: false
       Cannons: false
       Withers: false
@@ -203,3 +134,204 @@ HandledMaterials:
       Cannons: false
       Withers: false
       Minecarts: false
+  BEDROCK:
+    Durability:
+      Amount: 100
+      Enabled: false
+      ChanceToDrop: 0.0
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: false
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+
+  # MOAR MATERIALS!!  set 'Enabled: true', to activate...
+  COBBLESTONE:
+    Durability:
+      Amount: 2
+      Enabled: false
+      ChanceToDrop: 0.8
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: true
+      Cannons: true
+      Withers: true
+      Minecarts: true
+  SMOOTH_BRICK:
+    Durability:
+      Amount: 4
+      Enabled: false
+      ChanceToDrop: 0.7
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+  SMOOTH_STAIRS:
+    Durability:
+      Amount: 4
+      Enabled: false
+      ChanceToDrop: 0.7
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+  NETHER_BRICK:
+    Durability:
+      Amount: 3
+      Enabled: false
+      ChanceToDrop: 0.7
+      ResetEnabled: true
+      ResetAfter: 300000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: false
+      Withers: true
+      Minecarts: true
+  NETHER_BRICK_STAIRS:
+    Durability:
+      Amount: 3
+      Enabled: false
+      ChanceToDrop: 0.7
+      ResetEnabled: true
+      ResetAfter: 300000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: false
+      Withers: true
+      Minecarts: true
+  EMERALD_BLOCK:
+    Durability:
+      Amount: 6
+      Enabled: false
+      ChanceToDrop: 0.54
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+  DIAMOND_BLOCK:
+    Durability:
+      Amount: 5
+      Enabled: false
+      ChanceToDrop: 0.54
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+  GOLD_BLOCK:
+    Durability:
+      Amount: 3
+      Enabled: false
+      ChanceToDrop: 0.6
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+  IRON_BLOCK:
+    Durability:
+      Amount: 4
+      Enabled: false
+      ChanceToDrop: 0.64
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+  LAPIS_BLOCK:
+    Durability:
+      Amount: 4
+      Enabled: false
+      ChanceToDrop: 0.62
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+  REDSTONE_BLOCK:
+    Durability:
+      Amount: 5
+      Enabled: false
+      ChanceToDrop: 0.7
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+  QUARTZ_BLOCK:
+    Durability:
+      Amount: 5
+      Enabled: false
+      ChanceToDrop: 0.58
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+  QUARTZ_STAIRS:
+    Durability:
+      Amount: 5
+      Enabled: false
+      ChanceToDrop: 0.6
+      ResetEnabled: true
+      ResetAfter: 1800000
+    EnabledFor:
+      TNT: true
+      Creepers: true
+      Ghasts: false
+      Cannons: true
+      Withers: false
+      Minecarts: false
+
+# You can keep on adding more...
+# Copy paste one from above.  Just make sure the material name exists.
