--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,8 @@
 
 # Made with love <3
 
-# Do not touch this line. It will rewrite your config.
+# Do not touch this line. It will rewrite your config. 
+# The old config will be saved as 'config.yml.old'
 Version: ${project.version}
 
 # This will only check for updates by default. You can also enable this to download them for you (I don't recommend this).
@@ -14,7 +15,8 @@ Version: ${project.version}
 checkupdate: true
 downloadupdate: false
 
-# The explosion radius that will affect blocks 
+# The explosion radius that will be checked
+# Blocks in this radius will be affected.
 Radius: 3
 
 # The id of the item you use to check durability.
@@ -22,18 +24,26 @@ Radius: 3
 # CheckItemId: 38
 
 # Setting this to true may cause errors with other plugins. But it will make us handle all explosions
-# no matter what other plugins try to do.
+#  no matter what other plugins try to do.  Honestly not sure what this really does...
 IgnoreCancel: false
-  
+
+# Allows the durability of materials to gradually regenerate over time.
+# Requires:  'MATERIAL.Durability.ResetEnabled: true'  in materials.yml and adjustment of timings.
+# Example Timing Adjustment: 'OBSIDIAN.Durability.ResetAfter: 60000' for obsidian to regenerate 1 durability every minute
+DurabilityRegeneratesOverTime : false
+
 # False means that water and lava won't protect industructable materials from explosions.
-# This only applies if the material is enabled in materials.yml
+# Only applies if the material is enabled in materials.yml
+# This is a fix for the handling of blocks like obsidian that are not normally destroyable,
+#  but become destroyed in water with this disabled.
 FluidsProtectIndustructables: true
 
 # Enables a bypass to allow explosions to affect ALL blocks under / next to liquids.
-# This will bypass ALL blocks. We recommend not to use both this AND fluids protect.
+# This will bypass ALL blocks. We recommend not to use both this AND 'FluidsProtectIndustructables'.
+# Destroys fluid blocks and creates a new explosion.
 Explosions:
   BypassAllFluidProtection: false
-  
+
   # Protects "TNT cannons" from being destroyed when used. 
   # This doesn't do anything unless the above option is true.
   TNTCannonsProtected: true
