--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
             <url>http://repo.bukkit.org/content/groups/public/</url>
         </repository>
         <repository>
+            <id>turt2live</id>
+            <url>http://repo.turt2live.com/</url>
+        </repository>
+        <repository>
             <id>royaldev-repo</id>
             <url>http://minor.royaldev.org:8081/nexus/content/groups/public</url>
         </repository>
@@ -76,6 +80,11 @@
     </repositories>
     <dependencies>
         <dependency>
+            <groupId>com.turt2live.lib</groupId>
+            <artifactId>Towny</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
             <version>LATEST</version>
@@ -84,14 +93,6 @@
             <groupId>com.massivecraft</groupId>
             <artifactId>factions</artifactId>
             <version>1.8.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.palmergames</groupId>
-            <artifactId>towny</artifactId>
-            <version>0.83.0.0</version>
-            <optional>true</optional>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/Towny-0.83.0.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.sk89q</groupId>
