--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.pandemoneus</groupId>
+    <groupId>io.snw</groupId>
     <artifactId>ObsidianDestroyer</artifactId>
-    <version>4.0</version>
+    <version>4.0.1-SNAPSHOT</version>
     <name>ObsidianDestroyer</name>
     <url>https://github.com/drtshock/ObsidianDestroyer</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <upload.dbo.category>server-mods</upload.dbo.category>
-        <upload.dbo.slug>obsidiandestroyer</upload.dbo.slug>
-
     </properties>
     <issueManagement>
         <system>GitHub</system>
@@ -100,18 +96,4 @@
             <version>5.7.4-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.bukkit</groupId>
-                <artifactId>craftbukkit</artifactId>
-                <version>LATEST</version>
-            </dependency>
-            <dependency>
-                <groupId>com.massivecraft</groupId>
-                <artifactId>factions</artifactId>
-                <version>LATEST</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 </project>
